--- a/1_style_header_image_text/begin/styles.css
+++ b/1_style_header_image_text/begin/styles.css
@@ -13,10 +13,23 @@ header {
 	padding: 32px;
 }
 
+img {
+	width: 100%;
+	max-width: 100%;
+	height: auto;
+	vertical-align: middle;
+}
+
+footer {
+	padding: 20px 30px;
+	background-color: #dbecf1;
+}
+
 .style-logo {
 	margin-left: auto;
 	margin-right: auto;
 	display: block;
+	width: 192px;
 }
 
 .style-nav ul {
@@ -32,10 +45,91 @@ header {
 	padding: 8px;
 }
 
+.row:before, .row:after {
+	content: "";
+	display: table;
+}
+
+.row:after {
+	clear: both;
+}
+
+.hero {
+	background-image: url("../../completed/images/hero.jpg");
+	background-size: cover;
+	padding: 20px 20px 50px 20px;
+	color: #fff;
+	text-align: center;
+}
+
+h1 {
+	font-size: 57px;
+	text-transform: uppercase;
+	font-weight: 200;
+	margin-bottom: 23px;
+}
+
+h2 {
+	font-size: 30px;
+	text-transform: uppercase;
+	font-weight: 200;
+	margin-bottom: 60px;
+}
+
+h3 {
+	font-size: 16px;
+	text-transform: uppercase;
+	font-weight: 200;
+	margin-bottom: 120px;
+}
+
+h4 {
+	font-size: 16px;
+	font-weight: 200;
+	margin-bottom: 35px;
+}
+
+p {
+	font-size: 16px;
+	font-weight: 400;
+	margin-bottom: 35px;
+}
+
+.button {
+	border: 2px #fff solid;
+	padding: 8px 30px;
+	border-radius: 30px;
+	color: #fff;
+	text-decoration: none;
+}
+
+.info-box-tan {
+	background-color: #b9a88e;
+	color: #fff;
+	padding: 30px 20px 60px;
+	text-align: center;
+}
+
+.info-box-dark {
+	background-color: #2d2d35;
+	color: #fff;
+	padding: 30px 20px 60px;
+	text-align: center;
+}
+
+.footer-text {
+	font-size: 13px;
+	margin-bottom: 20px;
+}
+
+
+
 /*Tablet View*/
 
 @media (min-width: 768px){
-	
+	.style-nav {
+		
+	}
 	.style-nav ul li {
 		display: inline-block;
 	}
@@ -55,4 +149,6 @@ header {
 	}
 	
 }
+
+
 
